# Lincoln

./: .gitignore  Cargo.toml  README.md  bint.json  bint.lc1  bint.lcir  fact.json  fact.lc1  fact.lc2  fact.lc3.txt  fact.v1.json  history.txt
lincoln_common/: Cargo.toml  LICENSE
lincoln_common/src/: lib.rs  traits.rs
lincoln_common/src/value/: context.rs  mod.rs  traits.rs  wrapped.rs
lincoln_compiled/: Cargo.toml
lincoln_compiled/src/: arena_program.rs  closure.rs  coderef.rs  entries.rs  error.rs  lib.rs  permutation.rs  program.rs  value.rs
lincoln_compiled/src/coderef/: coderef.rs  entryref.rs  externref.rs  groupref.rs  mod.rs
lincoln_compiled/src/entries/: eval_fn.rs  export_entry.rs  extern_entry.rs  mod.rs  value_fn.rs  wrapped_fn.rs
lincoln_compiled/src/references/: coderef.rs  entryref.rs  externref.rs  groupref.rs
lincoln_compiled/src/value/: closure.rs  context.rs  mod.rs  traits.rs  wrapped.rs  wrapped_fn.rs
lincoln_ir/: Cargo.toml
lincoln_ir/src/: codemap.rs  entry.rs  lib.rs  program.rs  tests.rs
lincoln_lv1/: Cargo.toml  LICENSE
lincoln_lv1/src/: lib.rs  test.json  types.rs
lincoln_npm/: index.js  package.json
lincoln_wasm/: Cargo.toml  Readme.md
lincoln_wasm/html/: index.html  lincoln_wasm.js  lincoln_wasm_bg.wasm
lincoln_wasm/src/: jsvalue.rs  lib.rs  lincoln_int.rs  lincoln_jsvalue.rs  wasm_program.rs
lincoln_wasm/src/externs/: fact_externs.rs  mod.rs
src/: coderef.rs  command.rs  fact.json  fact.lcir  fact_externs.rs  main.rs  permutation.rs  pre_compile.rs  program.rs  program_manager.rs  traits.rs  value.rs
src/compiled/: coderef.rs  mod.rs  program.rs  value.rs
src/externs/: bint_externs.rs  fact_externs.rs  mod.rs
