[package]
name = "lincoln"
version = "0.1.0"
authors = ["Joe Ren <earthengine@gmail.com>"]
edition = "2018"

[dependencies]
log="*"
env_logger="*"
serde="*"
serde_derive="*"
serde_json="*"
failure="*"
failure_derive="*"
regex="*"
rustyline="*"
lincoln_common={path="lincoln_common"}
lincoln_compiled={path="lincoln_compiled"}