[package]
name = "lincoln_common"
version = "0.1.0"
authors = ["Joe Ren <earthengine@gmail.com>"]
edition = "2018"
description = "Common functions, traits for Lincoln"
license = "MIT"
homepage = "https://github.com/earthengine/Lincoln"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
failure="0.1"
smallvec={ version="0.6", features=["serde"]}