[package]
name = "lincoln_compiled"
version = "0.1.0"
authors = ["Joe Ren <earthengine@gmail.com>"]
edition = "2018"
description = "Lowest level presentation of Lincoln"
license = "MIT"

[dependencies]
log="0.4"
failure="0.1"
smallvec={ version="*", features=["serde"]}
serde="1.0"
serde_derive="1.0"
regex="1.1"
lincoln_common={path="../lincoln_common", version="*"}