[package]
name = "lincoln_ir"
version = "0.1.0"
authors = ["Joe Ren <earthengine@gmail.com>"]
edition = "2018"
description = "Intermediate representation of Lincoln"
license = "MIT"

[dependencies]
log="0.4"
serde="1.0"
serde_derive="1.0"
failure="0.1"
lincoln_common={path="../lincoln_common"}
lincoln_compiled={path="../lincoln_compiled"}