[package]
name = "lincoln_lv1"
version = "0.1.0"
authors = ["zhiyuren"]
edition = "2018"

[dependencies]
serde="1.0"
serde_derive="1.0"
serde_json="1.0"
quick-error="1.2"
lincoln_common={version="0.1", path="../lincoln_common"}
lincoln_compiled={version="0.1", path="../lincoln_compiled"}
lincoln_ir={version="0.1", path="../lincoln_ir"}