[package]
name = "lincoln_wasm"
version = "0.1.0"
authors = ["Joe Ren <earthengine@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version="0.2", features=["serde-serialize"] }
lincoln_compiled = { version="0.1", path="../lincoln_compiled" }
failure = "0.1"
serde = "1.0"
serde_derive = "1.0"
js-sys = "0.3"
smallvec = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s" 
